tests/baselines/reference/staticsInConstructorBodies.errors.txt
==== tests/cases/compiler/staticsInConstructorBodies.ts (2 errors) ====
    class C {
        constructor() {
            static p1 = 0; // ERROR
      ~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
            static m1() {} // ERROR
        }
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.